--- a/css/3rd-party-style.css
+++ b/css/3rd-party-style.css
@@ -32,6 +32,10 @@ the following lines of code should fix this.
 ytd-app[static] #movie_player[aria-label="YouTube Video Player"] .ytp-chrome-bottom {
     width: 100% !important;
 }
+/* For the same extension; why CustomTube. */
+html[disable-flexy-player="true"]:not([static]):not([pseudo-static]) ytd-watch-flexy:not([theater]):not([fullscreen]):not([no-top-margin]):not([reduced-top-margin]) #movie_player[aria-label="YouTube Video Player"] .ytp-chrome-bottom {
+    width: 100% !important;
+}
 
 /* Truffle */
 body[data-mogul-theater-mode] .html5-video-player .ytp-chrome-bottom {
