--- a/html/popup.css
+++ b/html/popup.css
@@ -119,7 +119,7 @@ body {
 }
 
 
-#yt-html5-menu .menu-opinion-note {
+#yt-html5-menu .menu-option-note {
     position: relative;
     bottom: 6px;
     font-size: 12px;
