--- a/html/popup.css
+++ b/html/popup.css
@@ -9,7 +9,7 @@ html {
 }
 
 a {
-    color: #ffa7a7;
+    color: #fc5454;
 }
 
 h1, h2, h3 {
@@ -38,6 +38,13 @@ body {
 
 #yt-html5-menu-button button img {
     height: 26px;
+}
+
+
+.links a {
+    font-weight: 800;
+    margin-right: 1em;
+    font-size: 14px;
 }
 
 
@@ -151,6 +158,20 @@ body {
     transition: all .25s;
 }
 
+#yt-html5-menu .menu-toggle .light.undefined::after {
+    content: '';
+    display: block;
+    position: relative;
+    border: 5px solid;
+    border-radius: 1em;
+    width: 100%;
+    height: 8px;
+    top: -5px;
+    left: -5px;
+    transition: all .25s;
+    animation: alertButtonBorder 3s linear infinite;
+}
+
 #yt-html5-menu .menu-toggle .light.true {
     background: #04ff00;
 }
@@ -214,4 +235,10 @@ body {
 @keyframes fadeIn {
     0% {opacity: 0;}
     100% {opacity: 1;}
+}
+
+@keyframes alertButtonBorder {
+    0% {border-color: rgb(255, 200, 0);}
+    50% {border-color: rgba(0, 0, 0, 0);}
+    100% {border-color: rgb(255, 200, 0);}
 }
